src/objects/vlocity_ins__ContactEmployment__c.object
<CustomObject>
    <description>Represents the current and past empoyment details of a contact. Master-detail child object of the Contact.</description>
    <fields>
        <fullName>vlocity_ins__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Employments</relationshipLabel>
        <relationshipName>ContactEmployments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmployerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ContactEmployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmployerPhone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmploymentType__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>PartTime</fullName>
                </value>
                <value>
                    <fullName>FullTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursPerWeek__c</fullName>
        <label>Hours Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsCurrentEmployment__c</fullName>
        <formula>If(TODAY ()&gt;= vlocity_ins__StartDate__c &amp;&amp; ( vlocity_ins__EndDate__c = null || TODAY ()&lt;= vlocity_ins__EndDate__c) &amp;&amp;  vlocity_ins__IsActive__c =true, true, false)</formula>
        <label>Current Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPastEmployment__c</fullName>
        <formula>If( vlocity_ins__EndDate__c &lt; TODAY(), true, false)</formula>
        <label>Past Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatesProvinces__c</fullName>
        <label>States/Provinces</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__VlocityStateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VerificationDate__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <label>Contact Employment</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>